--- a/Client/Makefile
+++ b/Client/Makefile
@@ -16,6 +16,10 @@ endif
 
 all: shared
 .PHONY: shared static
+
+run:
+	cd build && ./lab1-client
+
 shared: build/$(APP)-shared
 	ln -sf $(APP)-shared build/$(APP)
 static: build/$(APP)-static
