Core ToR finding from core

--- a/CONGA-Htsim/Makefile
+++ b/CONGA-Htsim/Makefile
@@ -10,7 +10,7 @@ $(shell mkdir -p $(DEPDIR) > /dev/null)
 $(shell mkdir -p $(DATADIR) > /dev/null)
 
 CXX = clang++
-CXXFLAGS = -std=c++11 -Wall -Wextra -g -Ofast
+CXXFLAGS = -std=c++11 -Wall -Wextra -g # -Ofast
 DEPFLAGS = -MT $@ -MMD -MP -MF $(DEPDIR)/$*.Td
 POSTCOMPILE = @mv -f $(DEPDIR)/$*.Td $(DEPDIR)/$*.d && touch $@
 
